--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.2.1",
     "@myriaddreamin/typst-ts-renderer": "0.4.0-rc5",
     "@myriaddreamin/typst-ts-web-compiler": "0.4.0-rc5",
     "@myriaddreamin/typst.ts": "0.4.0-rc5",
@@ -10,18 +11,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.50",
-    "@types/react": "^18.2.21",
+    "@types/node": "^16.18.54",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/web": "^0.0.99",
     "@typescript-eslint/eslint-plugin": "5.59.6",
     "@typescript-eslint/parser": "5.59.6",
+    "@uiw/react-codemirror": "^4.21.18",
+    "bootstrap": "^5.3.2",
     "builtin-modules": "3.3.0",
     "esbuild": "0.17.19",
     "esbuild-plugin-wasm": "^1.1.0",
     "eslint": "^8.41.0",
-    "pdfjs-dist": "^3.10.111",
+    "pdfjs-dist": "^3.11.174",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
     "tslib": "2.5.2",
